test/Dialect/LLZK/types_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s


module attributes {veridise.lang = "llzk"} {
  function.def private @a()
  // expected-error@+1 {{ref "@a" in type '!array.array<@a x !felt.felt>' refers to a 'function.def' which is not allowed}}
  function.def private @b(%x: !array.array<@a x !felt.felt>)
}
// -----

module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{'function.def' op references unknown symbol "@B"}}
  function.def private @c1(%x: !array.array<5,@B x index>)
}
// -----

module attributes {veridise.lang = "llzk"} {
  // expected-error@+2 {{'function.def' op references unknown symbol "@A"}}
  // expected-error@+1 {{'function.def' op references unknown symbol "@C"}}
  function.def private @c2(%x: !array.array<@A,3,@C x index>)
}
// -----

// expected-error@+1 {{Array dimension must be one of ['builtin.integer', 'builtin.symbol_ref', 'builtin.affine_map'] but found 'builtin.type'}}
function.def private @d(%x: !array.array<index x i256>)
// -----

// expected-error@+3 {{Array dimension must be one of ['builtin.integer', 'builtin.symbol_ref', 'builtin.affine_map'] but found 'builtin.type'}}
// expected-error@+2 {{Array dimension must be one of ['builtin.integer', 'builtin.symbol_ref', 'builtin.affine_map'] but found 'builtin.string'}}
// expected-error@+1 {{Array dimension must be one of ['builtin.integer', 'builtin.symbol_ref', 'builtin.affine_map'] but found 'builtin.array'}}
function.def private @e(%x: !array.array<index,"string",[] x !felt.felt>)
// -----

// expected-error@+1 {{expected a valid LLZK type but found 'i256'}}
function.def private @f(%x: !array.array<5 x i256>)
// -----

// expected-error@+2 {{'array.array' element type cannot be 'array.array'}}
// expected-error@+1 {{failed to parse LLZK_ArrayType parameter 'elementType' which is to be a `::mlir::Type`}}
function.def private @g(%x: !array.array<2 x !array.array<3 x !array.array<2 x i1>>>)
// -----

// expected-error@+1 {{Array dimension must be one of ['builtin.integer', 'builtin.symbol_ref', 'builtin.affine_map'] but found 'builtin.type'}}
function.def private @h(%x: !array.array<!felt.felt>)
// -----

// expected-error@+2 {{expected attribute value}}
// expected-error@+1 {{failed to parse array dimensions}}
function.def private @i(%x: !array.array<,, x !felt.felt>)
// -----

// expected-error@+2 {{expected attribute value}}
// expected-error@+1 {{failed to parse array dimensions}}
function.def private @j(%x: !array.array< x !felt.felt>)
// -----

// expected-error@+2 {{expected attribute value}}
// expected-error@+1 {{failed to parse array dimensions}}
function.def private @k(%x: !array.array<1,private, x !felt.felt>)
// -----

// expected-error@+2 {{expected attribute value}}
// expected-error@+1 {{failed to parse array dimensions}}
function.def private @l(%x: !array.array<1,3, x !felt.felt>)
// -----

// expected-error@+1 {{Array dimension must be one of ['builtin.integer', 'builtin.symbol_ref', 'builtin.affine_map'] but found 'builtin.string'}}
function.def private @m(%x: !array.array<1,"string",3 x !felt.felt>)
// -----

// expected-error@+1 {{'array.array' element type cannot be 'array.array'}}
function.def private @n(%x: !array.array<1,3 x !array.array<2 x !felt.felt>>)
// -----

// expected-error@+1 {{Array dimension must be one of ['builtin.integer', 'builtin.symbol_ref', 'builtin.affine_map'] but found 'builtin.array'}}
function.def private @o(%x: !array.array<[] x !felt.felt>)
// -----

// expected-error@+1 {{AffineMapAttr must yield a single result, but found 0 results}}
function.def private @p(%x: !array.array<affine_map<(i) -> ()> x !felt.felt>)

// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @q {
    // expected-error@+1 {{AffineMapAttr must yield a single result, but found 3 results}}
    llzk.field @foo : !array.array<affine_map<(i) -> (1, 2, i)> x !felt.felt>
    function.def @compute() -> !llzk.struct<@q> {
      %self = llzk.new_struct : !llzk.struct<@q>
      function.return %self : !llzk.struct<@q>
    }
    function.def @constrain(%self : !llzk.struct<@q>) {
      function.return
    }
  }
}
